fix(overflow): overflow issue
- fixed overflow issue again

References #Styling

--- a/src/main/resources/static/styles/index.css
+++ b/src/main/resources/static/styles/index.css
@@ -156,7 +156,7 @@
 }
 
 .recipe-search {
-    width: max-content;
+    width: 100%;
     margin: auto;
 }
 
